@@ -1188,7 +1188,7 @@ class FileMaker_FX extends UseSharedObjects implements DBClass_Interface
         return true;
     }
 
-    public function createInDB($bypassAuth)
+    public function createInDB()
     {
         $this->fieldInfo = null;
 
